# ural-holiday

./: .dccache  .env  .gitignore  README.md  pyproject.toml  requirements.txt
Booking/: db.sqlite3
Booking/air/: admin.py  apps.py  flight.py  forms.py  models.py  urls.py  utils.py  views.py
Booking/air/constants/: airlines.py  airports.py
Booking/air/migrations/: 0001_initial.py
Booking/air/templatetags/: custom_func.py
Booking/booking_app/: adapter.py  asgi.py  context_processors.py  decorators.py  forms.py  phoneVerification.py  settings-old.py  urls.py  utils.py  views.py  wsgi.py
Booking/booking_app/settings/: __init__.py  base.py  devevlopment.py  production.py  utils.py
Booking/booking_app/templates/: 404.html  about_us.html  contact_us.html  cookie_policy.html  fqa.html  home-header.html  home-new.html  home.html  payment_policy.html  privacy_policy.html  terms.html  verify-error.html  verify.html
Booking/seed/: sites.json
Booking/static/css/: book_flight_demo_style.css  bootstrap.min.css  flights.css  footer.css  home.css  responsive.css  style-old.css  style-override-new.css  style-overrides.css  style.css  theme-black.css  theme-blue.css  theme-orange.css  theme-pink.css  theme-primary.css  theme-purple.css  theme-strawberry.css  theme-yellow.css
Booking/static/fonts/: fonts.css  google_font.css
Booking/static/js/: all-script.js  book.js  e808bf9397.js  flights.html  home.js  scripts.js  search.js
deploy/: .env-example  .env-prodction  Dockerfile  docker-compose.yml  run.sh
docs/: hot-fix.md
env/: pyvenv.cfg
(+29 files in other folders)
